更新版本、端口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 # ExternalConfig values
-nesql.server.version=${version}
+nesql.server.version=0.4.4 for GTNH Modpack
 nesql.server.repository-name=nesql-repository
-nesql.server.dark-mode=true
+nesql.server.dark-mode=false
 nesql.server.info-panel-columns=3
 nesql.server.page-size.list=20
 nesql.server.page-size.grid-rows=20
 nesql.server.page-size.grid-columns=10
 nesql.server.page-size.recipe=10
+server.port=32533
 # Change to false to disable the /shutdown endpoint.
 # It is recommended to turn this off if you allow external users.
-nesql.server.enable-shutdown=true
+nesql.server.enable-shutdown=false
 # Change to true to allow IPs other than localhost to connect. Do this at your own risk!
-nesql.server.allow-external-users=false
+nesql.server.allow-external-users=true
 
 # Debug options
 #debug=true
