Added port settings to server properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,4 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 # Graceful shutdown allows us to serve the shutdown page before we actually shut down.
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=4s
+server.port=9090
